--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="http:phuocphap.ahiep.name.vn/phuocphap">Phim</a> <br/>
+<a href="http://phuocphap.ahiep.name.vn/phuocphap/ok.apk">Phim</a> <br/>
