--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<a href="http://phuocphap.ahiep.name.vn/phuocphap/ok.apk">Phim</a> <br/>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tải Ứng Dụng</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .download-container {
+            text-align: center;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .download-button {
+            display: inline-flex;
+            align-items: center;
+            text-decoration: none;
+            background-color: #28a745;
+            color: white;
+            padding: 12px 20px;
+            font-size: 18px;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .download-button:hover {
+            background-color: #218838;
+        }
+        .download-button i {
+            margin-right: 8px;
+        }
+    </style>
+</head>
+<body>
+    <div class="download-container">
+        <p>Click vào link này để tải -></p>
+        <a href="your-download-link.apk" class="download-button" download>
+            <i>⬇️</i> Tải Ngay
+        </a>
+    </div>
+</body>
+</html>
