--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
 </head>
 <body>
     <div class="download-container">
-        <p>Click vào link này để tải -></p>
-        <a href="your-download-link.apk" class="download-button" download>
+        <p>Còi Tivi -></p>
+        <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/Co.TiVi_1.0.4.apk" class="download-button" download>
+            <i>⬇️</i> Tải Ngay
+        </a>
+    </div>
+    <div class="download-container">
+        <p>Kho App khác -></p>
+        <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0" class="download-button" download>
             <i>⬇️</i> Tải Ngay
         </a>
     </div>
