--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
             <i>⬇️</i> Tải Ngay
         </a>
     </div>
+        <div class="download-container">
+        <p>Còi Tivi -></p>
+        <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/Co.TiVi_1.0.4.apk" class="download-button" download>
+            <i>⬇️</i> Tải Ngay
+        </a>
+    </div>
+    <div class="download-container">
+        <p>Kho App khác -></p>
+        <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0" class="download-button" download>
+            <i>⬇️</i> Tải Ngay
+        </a>
+    </div>
 </body>
 </html>
