--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tải Ứng Dụng</title>
     <style>
-        body {
+        /* Cài đặt chung */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
+        }
+        body {
             background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
+            min-height: 100vh;
+            padding: 20px;
         }
         .container {
             background: white;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 300px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
         }
         .app-list {
             list-style: none;
@@ -27,14 +35,15 @@
             margin: 0;
         }
         .app-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background: #ffffff;
+            background: #fff;
             padding: 15px;
             border-radius: 8px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s;
+        }
+        .app-item:hover {
+            transform: scale(1.05);
         }
         .download-button {
             display: flex;
@@ -43,9 +52,9 @@
             text-decoration: none;
             background-color: #28a745;
             color: white;
-            padding: 10px 15px;
-            font-size: 16px;
-            border-radius: 5px;
+            padding: 12px;
+            font-size: 18px;
+            border-radius: 6px;
             transition: background 0.3s;
             width: 100%;
             text-align: center;
@@ -56,10 +65,33 @@
         .download-button i {
             margin-right: 8px;
         }
+
+        /* Đáp ứng trên màn hình lớn (TV, Laptop) */
+        @media (min-width: 768px) {
+            .container {
+                max-width: 600px;
+            }
+            .download-button {
+                font-size: 20px;
+                padding: 15px;
+            }
+        }
+
+        /* Đáp ứng trên màn hình rất lớn */
+        @media (min-width: 1200px) {
+            .container {
+                max-width: 800px;
+            }
+            .download-button {
+                font-size: 22px;
+                padding: 18px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <h2>Kho Ứng Dụng</h2>
         <ul class="app-list">
             <li class="app-item">
                 <p><strong>Còi Tivi</strong></p>
@@ -74,13 +106,13 @@
                 </a>
             </li>
                         <li class="app-item">
-                <p><strong>ngu</strong></p>
+                <p><strong>Còi Tivi</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/Co.TiVi_1.0.4.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>vl</strong></p>
+                <p><strong>Kho App khác</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
