--- a/smtb.html
+++ b/smtb.html
@@ -91,29 +91,31 @@
 </head>
 <body>
     <div class="container">
-        <h2>Youtube Revanced</h2>
+        <h2>YouTube Không Quảng Cáo</h2>
         <ul class="app-list">
             <li class="app-item">
-                <p><strong>Còi Tivi</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/Co.TiVi_1.0.4.apk" class="download-button" download>
+                <p><strong>Smarttube (YouTube Không Quảng Cáo)</strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/smtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>Kho App khác</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0" class="download-button" download>
+                <p><strong>Thêm biểu tượng YouTube ra màn hình chính </strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0/iconsmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
                         <li class="app-item">
-                <p><strong>Còi Tivi</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/Co.TiVi_1.0.4.apk" class="download-button" download>
+                <p><strong>Giọng nói ngoài cho Smarttube
+                Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicelinor.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>Kho App khác</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0" class="download-button" download>
+                <p><strong>Giọng nói ngoài cho Smarttube 
+                Yêu cầu: Xoá được youtube gốc</strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0/voicesmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
