--- a/smtb.html
+++ b/smtb.html
@@ -101,7 +101,7 @@
             </li>
             <li class="app-item">
                 <p><strong>Thêm biểu tượng YouTube ra màn hình chính </strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0/iconsmtb.apk" class="download-button" download>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/iconsmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
@@ -115,7 +115,7 @@
             <li class="app-item">
                 <p><strong>Giọng nói ngoài cho Smarttube 
                 Yêu cầu: Xoá được youtube gốc</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/tag/V1.0.0/voicesmtb.apk" class="download-button" download>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicesmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
