--- a/smtb.html
+++ b/smtb.html
@@ -91,7 +91,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>YouTube Không Quảng Cáo</h2>
+        <h2><color Blue>YouTube Không Quảng Cáo</color></h2>
         <ul class="app-list">
             <li class="app-item">
                 <p><strong>Smarttube (YouTube Không Quảng Cáo)</strong></p>
@@ -106,15 +106,13 @@
                 </a>
             </li>
                         <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube
-                Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
+                <p><strong>Giọng nói ngoài cho Smarttube /br Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicelinor.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube 
-                Yêu cầu: Xoá được youtube gốc</strong></p>
+                <p><strong>Giọng nói ngoài cho Smarttube /br Yêu cầu: Xoá được youtube gốc</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicesmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
