--- a/smtb.html
+++ b/smtb.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pháp Ferrari</title>
     <style>
+    
         /* Cài đặt chung */
         * {
             box-sizing: border-box;
@@ -91,7 +92,7 @@
 </head>
 <body>
     <div class="container">
-        <h2><color Blue>YouTube Không Quảng Cáo</color></h2>
+        <h2 style="color: blue;">YouTube Không Quảng Cáo</h2>
         <ul class="app-list">
             <li class="app-item">
                 <p><strong>Smarttube (YouTube Không Quảng Cáo)</strong></p>
@@ -106,13 +107,13 @@
                 </a>
             </li>
                         <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube /br Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
+                <p><strong>Giọng nói ngoài cho Smarttube <br> Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicelinor.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube /br Yêu cầu: Xoá được youtube gốc</strong></p>
+                <p><strong>Giọng nói ngoài cho Smarttube <br> Yêu cầu: Xoá được youtube gốc</strong></p>
                 <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicesmtb.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
