--- a/index.html
+++ b/index.html
@@ -1452,14 +1452,14 @@ Chặn quảng cáo🦊
 <article class='blog-post hentry post-filter'>
 <div class='post-filter-inside-wrap'>
 <div class='post-filter-image'>
-<a href='https://tiny.cc/phapytb'>
+<a href='https://rupanh123-phap.github.io/PHAPFERRARI.github.io/smtb.html'>
 <img src='https://raw.githubusercontent.com/rupanh123-phap/PHAPFERRARI.github.io/refs/heads/main/smtb.png'/>
 </a>
 </div>
 <div class='relatedStory-box'>
 <h2 class='entry-title vcard'>
-<a href='https://tiny.cc/phapytb/'>
-Smartube
+<a href='https://rupanh123-phap.github.io/PHAPFERRARI.github.io/smtb.html'>
+SmartTube
 </h2>
 <span class='label-news-ui'>
 Chặn quảng cáo, icon YouTube 💌
