--- a/smtb.html
+++ b/smtb.html
@@ -119,32 +119,21 @@
                 </a>
             </li>
         </ul>
-                <h2 style="color: blue;">YouTube Không Quảng Cáo</h2>
+                <h2 style="color: blue;">YouTube Revanced dành cho điện thoại, máy tính bảng<br></h2>
         <ul class="app-list">
             <li class="app-item">
-                <p><strong>Smarttube (YouTube Không Quảng Cáo)</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/smtb.apk" class="download-button" download>
+                <p><strong>YouTube Revanced</strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/ytbrvc.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
             <li class="app-item">
-                <p><strong>Thêm biểu tượng YouTube ra màn hình chính </strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/iconsmtb.apk" class="download-button" download>
+                <p><strong>Micro G (Để Đăng nhập tk google)</strong></p>
+                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/microg.apk" class="download-button" download>
                     <i>⬇️</i> Tải Ngay
                 </a>
             </li>
-                        <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube <br> Yêu cầu: Phải bật được tùy chọn nhà phát triển và anddoid 9 trở lên mới có tác dụng</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicelinor.apk" class="download-button" download>
-                    <i>⬇️</i> Tải Ngay
-                </a>
-            </li>
-            <li class="app-item">
-                <p><strong>Giọng nói ngoài cho Smarttube <br> Yêu cầu: Xoá được youtube gốc</strong></p>
-                <a href="https://github.com/rupanh123-phap/PHAPFERRARI.github.io/releases/download/V1.0.0/voicesmtb.apk" class="download-button" download>
-                    <i>⬇️</i> Tải Ngay
-                </a>
-            </li>
+        
         </ul>
     </div>
 </body>
